# christmas-tree-rs

./: Cargo.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: lib.rs  message.rs
firmware/: Cargo.toml
firmware/src/: logger.rs  main.rs  messages.rs
server/: Cargo.toml
server/src/: main.rs  messages.rs
