[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["serde/std", "postcard/use-std"]
alloc = ["serde/alloc", "postcard/alloc"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.1", features = ["postcard-derive"]}
log = "0.4"